--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
 
+		<link rel="stylesheet" type="text/css" href="css/custom.css">
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 		<link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57.png">
-
-		<link rel="stylesheet" type="text/css" href="css/custom.css">
-		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
-		<!--[if IE]>
-			<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-		<![endif]-->
 		
 		<!--[if lt IE 9]>
 			<script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,8 +23,36 @@
 	<body>
 		<div class="wrapper-main">
 			<header>
-				<h1>coolz</h1>
+				<div class="row">
+					<div class="large-12">
+						<h1>COOLZ™ <span class="light">beta</span></h1>
+						<h3 class="light">12 grid light weight column framework (extended version).</h3>
+						<p>
+							Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum.
+						</p>
+					</div>
+				</div>
 			</header>
+
+			<div class="row">
+				<div class="large-6 column">
+					<h1>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
+					<h2>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
+					<h3>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
+					<h4>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h4>
+					<h5>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h5>
+					<h6>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
+				</div>
+
+				<div class="large-6 column">
+					<h1 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
+					<h2 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
+					<h3 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
+					<h4 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h4>
+					<h5 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h5>
+					<h6 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
+				</div>
+			</div>
 
 			<div class="row">
 				<div class="large-1 columns">1</div>
