--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
 			<header>
 				<div class="row">
 					<div class="large-12">
-						<h1>COOLZ™ <span class="light">beta</span></h1>
+						<h1>COOLZ™</h1>
 						<h3 class="light">12 grid light weight column framework (extended version).</h3>
-						<p>
-							Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum.
-						</p>
+						<div class="row">
+							<p class="large-6 column">
+								Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+							</p>
+
+							<p class="large-6 column">
+								Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+							</p>
+						</div>
 					</div>
 				</div>
 			</header>
