Started styling btns. Col fixes and typography fixes.

--- a/index.html
+++ b/index.html
@@ -23,21 +23,34 @@
 	<body>
 		<div class="wrapper-main">
 			<header>
-				<div class="row">
-					<div class="large-12">
-						<h1>COOLZ™</h1>
-						<h3 class="light">12 grid light weight column framework (extended version).</h3>
-						<div class="row">
-							<p class="large-6 column">
-								Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-							</p>
+				
 
-							<p class="large-6 column">
-								Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-							</p>
+						<div class="row">
+							<div class="large-12">
+								<h1>COOLZ™</h1>
+								<h3 class="light">12 grid light weight column framework (extended version).</h3>
+							</div>
 						</div>
-					</div>
-				</div>
+
+						<div class="row">
+							<div class="large-6 column">
+								<p>
+									Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+								</p>
+
+								<p>
+									Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+								</p>
+							</div>
+
+							<div class="large-6 column">
+								<p>
+									Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+								</p>
+							</div>
+						</div>
+
+					
 			</header>
 
 			<div class="row">
@@ -122,6 +135,12 @@
 			<div class="row">
 				<div class="large-1 columns">1</div>
 				<div class="large-11 columns">11</div>
+			</div>
+
+			<div class="row">
+				<div class="large-12 columns">
+					<a href="#" class="button">Button</a>
+				</div>
 			</div>
 
 		</div><!-- .wrapper-main -->
