Changed name to lower case.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					</div>
 
 					<div class="L-6 col">
-						<h1>COOLZ™</h1>
+						<h1>coolz™</h1>
 						<h3 class="light">12 grid light weight column framework (extended version).</h3>
 						<p>
 							This SCSS (or CSS, if you like) framework is for those of you who just want a simple column 12 grid with no extra styling that you have to override.
@@ -48,7 +48,7 @@
 					<h3>Grid</h3>
 					<h5 class="light">Twelve grid layout</h5>
 					<p>
-						
+
 					</p>
 				</div>
 			</div>
