Removed mixins. Added some additional lower case col classes.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 		<div class="wrapper-main">
 			<header>
 				<div class="row">
-					<div class="L-6 col">
-						<!--img src="http://placehold.it/640x350" alt="" /-->
+					<div class="l-6 col">
 						<img src="img/tv.jpg" alt="" />
 					</div>
 
