--- a/index.html
+++ b/index.html
@@ -24,20 +24,27 @@
 		<div class="wrapper-main">
 			<header>
 				<div class="row">
-					<div class="l-6 col">
+					<div class="L-6 col">
 						<img src="img/tv.jpg" alt="" />
 					</div>
 
 					<div class="L-6 col">
 						<h1>coolz™</h1>
 						<h3 class="light">12 grid light weight column framework (extended version).</h3>
+
 						<p>
 							This SCSS (or CSS, if you like) framework is for those of you who just want a simple column 12 grid with no extra styling that you have to override.
 						</p>
 
-						<pre>
-							<code>$ git clone git@github.com:tommyskott/coolz.git</code>
-						</pre>
+						<h6>Start off by cloning the repo.</h6>
+						<pre><code>$ git clone git@github.com:tommyskott/coolz.git</code></pre>
+
+						<h6>Create a simple column layout</h6>
+<pre><code>&lt;div class="row"&gt;
+	&lt;div class="L-6 col"&gt;6&lt;/div&gt;
+	&lt;div class="L-6 col"&gt;6&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+
 					</div>
 				</div>
 			</header>
@@ -68,7 +75,7 @@
 			</div>
 
 			<div class="row demo">
-				<div class="L-12 col">12</div>
+				<div class="S-6 L-12 col">S-6 , L-12</div>
 			</div>
 
 			<div class="row demo">
@@ -125,7 +132,7 @@
 			</div>
 
 			<div class="row">
-				<div class="L-2 col">
+				<div class="L-4 col">
 					<h1>h1</h1>
 					<h2>h2</h2>
 					<h3>h3</h3>
@@ -134,7 +141,7 @@
 					<h6>h6</h6>
 				</div>
 
-				<div class="L-3 col">
+				<div class="L-4 col">
 					<h1 class="light">h1.light</h1>
 					<h2 class="light">h2.light</h2>
 					<h3 class="light">h3.light</h3>
@@ -143,12 +150,34 @@
 					<h6 class="light">h6.light</h6>
 				</div>
 
-				<div class="L-3 col">
+				<div class="L-4 col">
+					<p>
+						Aenean lacinia bibendum nulla sed consectetur. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. 
+					</p>
 
+					<p>
+						Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam id dolor id nibh ultricies vehicula ut id elit. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
+					</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="L-6 col">
+					<h1>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
+					<h2>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
+					<h3>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
+					<h4>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h4>
+					<h5>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h5>
+					<h6>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
 				</div>
 
-				<div class="L-3 col">
-
+				<div class="L-6 col">
+					<h1 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
+					<h2 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
+					<h3 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
+					<h4 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h4>
+					<h5 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h5>
+					<h6 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
 				</div>
 			</div>
 
@@ -162,6 +191,18 @@
 
 					<p>
 						Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
+					</p>
+				</div>
+
+				<div class="L-3 col">
+					<p>
+						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+					</p>
+				</div>
+
+				<div class="L-3 col">
+					<p>
+						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 					</p>
 				</div>
 
