Additional classes for small and large.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</div>
 
 			<div class="row demo">
-				<div class="S-6 L-12 col">S-6 , L-12</div>
+				<div class="S-6 L-12 col"><span class="hide-l">S-6</span><span class="hide-s">L-12</span></div>
 			</div>
 
 			<div class="row demo">
