--- a/index.html
+++ b/index.html
@@ -60,67 +60,67 @@
 			</div>
 
 			<div class="row demo">
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
-				<div class="L-1 col">1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-1 col">L-1</div>
 			</div>
 
 			<div class="row demo">
-				<div class="S-6 L-12 col"><span class="hide-l">S-6</span><span class="hide-s">L-12</span></div>
+				<div class="S-8 L-12 col"><span>Small-8</span><span class="hide-s"> / Large-12</span></div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-6 col">6</div>
-				<div class="L-6 col">6</div>
+				<div class="L-6 col">L-6</div>
+				<div class="L-6 col">L-6</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-8 col">8</div>
-				<div class="L-4 col">4</div>
+				<div class="L-8 col">L-8</div>
+				<div class="L-4 col">L-4</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-2 col">2</div>
-				<div class="L-2 col">2</div>
-				<div class="L-2 col">2</div>
-				<div class="L-2 col">2</div>
-				<div class="L-2 col">2</div>
-				<div class="L-2 col">2</div>
+				<div class="L-2 col">L-2</div>
+				<div class="L-2 col">L-2</div>
+				<div class="L-2 col">L-2</div>
+				<div class="L-2 col">L-2</div>
+				<div class="L-2 col">L-2</div>
+				<div class="L-2 col">L-2</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-5 col">5</div>
-				<div class="L-7 col">7</div>
+				<div class="L-5 col">L-5</div>
+				<div class="L-7 col">L-7</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-3 col">3</div>
-				<div class="L-6 col">6</div>
-				<div class="L-3 col">3</div>
+				<div class="L-3 col">L-3</div>
+				<div class="L-6 col">L-6</div>
+				<div class="L-3 col">L-3</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-3 col">3</div>
-				<div class="L-9 col">9</div>
+				<div class="L-3 col">L-3</div>
+				<div class="L-9 col">L-9</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-10 col">10</div>
-				<div class="L-2 col">2</div>
+				<div class="L-10 col">L-10</div>
+				<div class="L-2 col">L-2</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-1 col">1</div>
-				<div class="L-11 col">11</div>
+				<div class="L-1 col">L-1</div>
+				<div class="L-11 col">L-11</div>
 			</div>
 
 			<!-- Typography -->
