--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
 
 		<link rel="stylesheet" type="text/css" href="css/custom.css">
-		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
-		<link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72.png">
-		<link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72.png">
+		<link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57.png">
 		
 		<!--[if lt IE 9]>
 			<script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
