--- a/index.html
+++ b/index.html
@@ -22,30 +22,27 @@
 	</head>
 	<body>
 		<div class="wrapper-main">
-			<header>
-				<div class="row">
-					<div class="L-6 col">
-						<img src="img/tv.jpg" alt="" />
-					</div>
+			<header class="row">
+				<div class="L-6 col">
+					<img src="img/tv.jpg" alt="" />
+				</div>
 
-					<div class="L-6 col">
-						<h1>coolz™</h1>
-						<h3 class="light">12 grid light weight column framework (extended version).</h3>
+				<div class="L-6 col">
+					<h1>coolz™</h1>
+					<h3 class="light">12 grid light weight column framework (extended version).</h3>
 
-						<p>
-							This SCSS (or CSS, if you like) framework is for those of you who just want a simple column 12 grid with no extra styling that you have to override.
-						</p>
+					<p>
+						This SCSS (or CSS, if you like) framework is for those of you who just want a simple column 12 grid with no extra styling that you have to override.
+					</p>
 
-						<h6>Start off by cloning the repo.</h6>
-						<pre><code>$ git clone git@github.com:tommyskott/coolz.git</code></pre>
+					<h6>Start off by cloning the repo.</h6>
+					<pre><code>$ git clone git@github.com:tommyskott/coolz.git</code></pre>
 
-						<h6>Create a simple column layout</h6>
+					<h6>Create a simple column layout</h6>
 <pre><code>&lt;div class="row"&gt;
 	&lt;div class="L-6 col"&gt;6&lt;/div&gt;
 	&lt;div class="L-6 col"&gt;6&lt;/div&gt;
 &lt;/div&gt;</code></pre>
-
-					</div>
 				</div>
 			</header>
 
