--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 
 		<link rel="stylesheet" type="text/css" href="css/custom.css">
 		<link rel="icon" type="image/x-icon" href="img/favicon.ico">
-
-		<link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72.png">
-		<link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57.png">
 		
 		<!--[if lt IE 9]>
 			<script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -23,11 +18,11 @@
 	<body>
 		<div class="wrapper-main">
 			<header class="row">
-				<div class="L-6 col">
+				<div class="l-6 col">
 					<img src="img/tv.jpg" alt="" />
 				</div>
 
-				<div class="L-6 col">
+				<div class="l-6 col">
 					<h1>coolz™</h1>
 					<h3 class="light">12 grid light weight column framework (extended version).</h3>
 
@@ -40,14 +35,14 @@
 
 					<h6>Create a simple column layout</h6>
 <pre><code>&lt;div class="row"&gt;
-	&lt;div class="L-6 col"&gt;6&lt;/div&gt;
-	&lt;div class="L-6 col"&gt;6&lt;/div&gt;
+	&lt;div class="l-6 col"&gt;6&lt;/div&gt;
+	&lt;div class="l-6 col"&gt;6&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 				</div>
 			</header>
 
 			<div class="row">
-				<div class="L-12 col">
+				<div class="l-12 col">
 					<h3>Grid</h3>
 					<h5 class="light">Twelve grid layout</h5>
 					<p>
@@ -57,79 +52,79 @@
 			</div>
 
 			<div class="row demo">
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
-				<div class="L-1 col">L-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-1 col">l-1</div>
 			</div>
 
 			<div class="row demo">
-				<div class="S-8 L-12 col"><span>Small-8</span><span class="hide-s"> / Large-12</span></div>
+				<div class="s-8 l-12 col"><span>s-8</span><span class="hide-s"> / l-12</span></div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-6 col">L-6</div>
-				<div class="L-6 col">L-6</div>
+				<div class="l-6 col">l-6</div>
+				<div class="l-6 col">l-6</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-8 col">L-8</div>
-				<div class="L-4 col">L-4</div>
+				<div class="l-8 col">l-8</div>
+				<div class="l-4 col">l-4</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-2 col">L-2</div>
-				<div class="L-2 col">L-2</div>
-				<div class="L-2 col">L-2</div>
-				<div class="L-2 col">L-2</div>
-				<div class="L-2 col">L-2</div>
-				<div class="L-2 col">L-2</div>
+				<div class="l-2 col">l-2</div>
+				<div class="l-2 col">l-2</div>
+				<div class="l-2 col">l-2</div>
+				<div class="l-2 col">l-2</div>
+				<div class="l-2 col">l-2</div>
+				<div class="l-2 col">l-2</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-5 col">L-5</div>
-				<div class="L-7 col">L-7</div>
+				<div class="l-5 col">l-5</div>
+				<div class="l-7 col">l-7</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-3 col">L-3</div>
-				<div class="L-6 col">L-6</div>
-				<div class="L-3 col">L-3</div>
+				<div class="l-3 col">l-3</div>
+				<div class="l-6 col">l-6</div>
+				<div class="l-3 col">l-3</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-3 col">L-3</div>
-				<div class="L-9 col">L-9</div>
+				<div class="l-3 col">l-3</div>
+				<div class="l-9 col">l-9</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-10 col">L-10</div>
-				<div class="L-2 col">L-2</div>
+				<div class="l-10 col">l-10</div>
+				<div class="l-2 col">l-2</div>
 			</div>
 
 			<div class="row demo">
-				<div class="L-1 col">L-1</div>
-				<div class="L-11 col">L-11</div>
+				<div class="l-1 col">l-1</div>
+				<div class="l-11 col">l-11</div>
 			</div>
 
 			<!-- Typography -->
 			<div class="row">
-				<div class="L-12 col">
+				<div class="l-12 col">
 					<h3>Typography</h3>
 					<h5 class="light">Basic typography styling</h5>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="L-4 col">
+				<div class="l-4 col">
 					<h1>h1</h1>
 					<h2>h2</h2>
 					<h3>h3</h3>
@@ -138,7 +133,7 @@
 					<h6>h6</h6>
 				</div>
 
-				<div class="L-4 col">
+				<div class="l-4 col">
 					<h1 class="light">h1.light</h1>
 					<h2 class="light">h2.light</h2>
 					<h3 class="light">h3.light</h3>
@@ -147,7 +142,7 @@
 					<h6 class="light">h6.light</h6>
 				</div>
 
-				<div class="L-4 col">
+				<div class="l-4 col">
 					<p>
 						Aenean lacinia bibendum nulla sed consectetur. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. 
 					</p>
@@ -159,7 +154,7 @@
 			</div>
 
 			<div class="row">
-				<div class="L-6 col">
+				<div class="l-6 col">
 					<h1>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
 					<h2>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
 					<h3>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
@@ -168,7 +163,7 @@
 					<h6>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
 				</div>
 
-				<div class="L-6 col">
+				<div class="l-6 col">
 					<h1 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
 					<h2 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
 					<h3 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
@@ -179,7 +174,7 @@
 			</div>
 
 			<div class="row">
-				<div class="L-6 col">
+				<div class="l-6 col">
 					<h1>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
 					<h3 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
 					<p>
@@ -191,19 +186,19 @@
 					</p>
 				</div>
 
-				<div class="L-3 col">
+				<div class="l-3 col">
 					<p>
 						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 					</p>
 				</div>
 
-				<div class="L-3 col">
+				<div class="l-3 col">
 					<p>
 						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 					</p>
 				</div>
 
-				<div class="L-6 col">
+				<div class="l-6 col">
 					<p>
 						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 					</p>
