Stripped out demo design to a separate file. Removed unnecessary classes and styling.

--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>coolz</title>
-		<meta name="description" content="">
-		<meta name="keywords" content="">
-		<meta name="author" content="">
+		<meta name="description" content="12 grid light weight column framework">
+		<meta name="keywords" content="coolz">
+		<meta name="author" content="Tommy Skott">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
 
-		<link rel="stylesheet" type="text/css" href="css/custom.css">
+		<link rel="stylesheet" type="text/css" href="css/coolz.css">
 		<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 		
-		<!--[if lt IE 9]>
-			<script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+		<!--[if lt IE 9]><script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
-	<body>
+	<body class="demo">
 		<div class="wrapper-main">
 			<header class="row">
 				<div class="l-6 col">
-					<img src="img/tv.jpg" alt="" />
-				</div>
-
-				<div class="l-6 col">
 					<h1>coolz™</h1>
-					<h3 class="light">12 grid light weight column framework (extended version).</h3>
+					<h3 class="light">12 grid light weight column framework.</h3>
 
 					<p>
 						This SCSS (or CSS, if you like) framework is for those of you who just want a simple column 12 grid with no extra styling that you have to override.
@@ -34,10 +28,14 @@
 					<pre><code>$ git clone git@github.com:tommyskott/coolz.git</code></pre>
 
 					<h6>Create a simple column layout</h6>
-<pre><code>&lt;div class="row"&gt;
+					<pre><code>&lt;div class="row"&gt;
 	&lt;div class="l-6 col"&gt;6&lt;/div&gt;
 	&lt;div class="l-6 col"&gt;6&lt;/div&gt;
 &lt;/div&gt;</code></pre>
+				</div>
+
+				<div class="l-6 col">
+					<img src="img/tv.jpg" alt="" />
 				</div>
 			</header>
 
@@ -51,160 +49,71 @@
 				</div>
 			</div>
 
-			<div class="row demo">
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-				<div class="l-1 col">l-1</div>
-			</div>
-
-			<div class="row demo">
-				<div class="s-8 l-12 col"><span>s-8</span><span class="hide-s"> / l-12</span></div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-6 col">l-6</div>
-				<div class="l-6 col">l-6</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-8 col">l-8</div>
-				<div class="l-4 col">l-4</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-2 col">l-2</div>
-				<div class="l-2 col">l-2</div>
-				<div class="l-2 col">l-2</div>
-				<div class="l-2 col">l-2</div>
-				<div class="l-2 col">l-2</div>
-				<div class="l-2 col">l-2</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-5 col">l-5</div>
-				<div class="l-7 col">l-7</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-3 col">l-3</div>
-				<div class="l-6 col">l-6</div>
-				<div class="l-3 col">l-3</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-3 col">l-3</div>
-				<div class="l-9 col">l-9</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-10 col">l-10</div>
-				<div class="l-2 col">l-2</div>
-			</div>
-
-			<div class="row demo">
-				<div class="l-1 col">l-1</div>
-				<div class="l-11 col">l-11</div>
-			</div>
-
-			<!-- Typography -->
-			<div class="row">
-				<div class="l-12 col">
-					<h3>Typography</h3>
-					<h5 class="light">Basic typography styling</h5>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="l-4 col">
-					<h1>h1</h1>
-					<h2>h2</h2>
-					<h3>h3</h3>
-					<h4>h4</h4>
-					<h5>h5</h5>
-					<h6>h6</h6>
+			<section>
+				<div class="row">
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
+					<div class="l-1 col">l-1</div>
 				</div>
 
-				<div class="l-4 col">
-					<h1 class="light">h1.light</h1>
-					<h2 class="light">h2.light</h2>
-					<h3 class="light">h3.light</h3>
-					<h4 class="light">h4.light</h4>
-					<h5 class="light">h5.light</h5>
-					<h6 class="light">h6.light</h6>
+				<div class="row">
+					<div class="s-8 l-12 col"><span>s-8</span><span class="hide-s"> / l-12</span></div>
 				</div>
 
-				<div class="l-4 col">
-					<p>
-						Aenean lacinia bibendum nulla sed consectetur. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. 
-					</p>
-
-					<p>
-						Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam id dolor id nibh ultricies vehicula ut id elit. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
-					</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="l-6 col">
-					<h1>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
-					<h2>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
-					<h3>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
-					<h4>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h4>
-					<h5>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h5>
-					<h6>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
+				<div class="row">
+					<div class="l-6 col">l-6</div>
+					<div class="l-6 col">l-6</div>
 				</div>
 
-				<div class="l-6 col">
-					<h1 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
-					<h2 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
-					<h3 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
-					<h4 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h4>
-					<h5 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h5>
-					<h6 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h6>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="l-6 col">
-					<h1>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h1>
-					<h3 class="light">Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</h3>
-					<p>
-						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-					</p>
-
-					<p>
-						Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
-					</p>
+				<div class="row">
+					<div class="l-8 col">l-8</div>
+					<div class="l-4 col">l-4</div>
 				</div>
 
-				<div class="l-3 col">
-					<p>
-						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-					</p>
+				<div class="row">
+					<div class="l-2 col">l-2</div>
+					<div class="l-2 col">l-2</div>
+					<div class="l-2 col">l-2</div>
+					<div class="l-2 col">l-2</div>
+					<div class="l-2 col">l-2</div>
+					<div class="l-2 col">l-2</div>
 				</div>
 
-				<div class="l-3 col">
-					<p>
-						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-					</p>
+				<div class="row">
+					<div class="l-5 col">l-5</div>
+					<div class="l-7 col">l-7</div>
 				</div>
 
-				<div class="l-6 col">
-					<p>
-						Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-					</p>
+				<div class="row">
+					<div class="l-3 col">l-3</div>
+					<div class="l-6 col">l-6</div>
+					<div class="l-3 col">l-3</div>
 				</div>
-			</div>
 
+				<div class="row">
+					<div class="l-3 col">l-3</div>
+					<div class="l-9 col">l-9</div>
+				</div>
+
+				<div class="row">
+					<div class="l-10 col">l-10</div>
+					<div class="l-2 col">l-2</div>
+				</div>
+
+				<div class="row">
+					<div class="l-1 col">l-1</div>
+					<div class="l-11 col">l-11</div>
+				</div>
+			</section>
 
 		</div><!-- .wrapper-main -->
 	</body>
