Cleaned up in css and moved demo styling to a separate css file.

--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>coolz</title>
-		<meta name="description" content="12 grid light weight column framework">
+		<meta name="description" content="A light weight 12 column grid framework">
 		<meta name="keywords" content="coolz">
 		<meta name="author" content="Tommy Skott">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
 
-		<link rel="stylesheet" type="text/css" href="css/coolz.css">
 		<link rel="icon" type="image/x-icon" href="img/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="css/coolz.css">
+		<link rel="stylesheet" type="text/css" href="css/demo.css">
 		
 		<!--[if lt IE 9]><script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body class="demo">
 		<div class="wrapper-main">
-			<header class="row">
+
+			<div class="row">
 				<div class="l-6 col">
 					<h1>coolz™</h1>
-					<h3 class="light">12 grid light weight column framework.</h3>
-
+					<h3 class="light">A light weight 12 column grid framework</h3>
 					<p>
-						This SCSS (or CSS, if you like) framework is for those of you who just want a simple column 12 grid with no extra styling that you have to override.
+						This SCSS (or CSS, if you like) grid is for those of you who just want a simple 12 column grid with no extra styling that you have to override.
 					</p>
-
-					<h6>Start off by cloning the repo.</h6>
-					<pre><code>$ git clone git@github.com:tommyskott/coolz.git</code></pre>
-
-					<h6>Create a simple column layout</h6>
-					<pre><code>&lt;div class="row"&gt;
-	&lt;div class="l-6 col"&gt;6&lt;/div&gt;
-	&lt;div class="l-6 col"&gt;6&lt;/div&gt;
-&lt;/div&gt;</code></pre>
 				</div>
 
 				<div class="l-6 col">
 					<img src="img/tv.jpg" alt="" />
 				</div>
-			</header>
+			</div>
 
 			<div class="row">
 				<div class="l-12 col">
