--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--[if lt IE 9]><script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body class="demo">
-		<div class="wrapper-main">
+		<div class="wrapper">
 
 			<div class="row">
 				<div class="l-6 col">
@@ -29,7 +29,7 @@
 				<div class="l-6 col">
 					<img src="img/tv.jpg" alt="" />
 				</div>
-			</div>
+			</div><!-- .row -->
 
 			<div class="row">
 				<div class="l-12 col">
@@ -39,7 +39,7 @@
 
 					</p>
 				</div>
-			</div>
+			</div><!-- .row -->
 
 			<section>
 				<div class="row">
@@ -55,21 +55,25 @@
 					<div class="l-1 col">l-1</div>
 					<div class="l-1 col">l-1</div>
 					<div class="l-1 col">l-1</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
-					<div class="s-8 l-12 col"><span>s-8</span><span class="hide-s"> / l-12</span></div>
-				</div>
+					<div class="s-8 m-4 l-12 col">
+						<span class="hide-m hide-l">s-8</span>
+						<span class="hide-s hide-l">m-4</span>
+						<span class="hide-s hide-m">l-12</span>
+					</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-6 col">l-6</div>
 					<div class="l-6 col">l-6</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-8 col">l-8</div>
 					<div class="l-4 col">l-4</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-2 col">l-2</div>
@@ -78,35 +82,36 @@
 					<div class="l-2 col">l-2</div>
 					<div class="l-2 col">l-2</div>
 					<div class="l-2 col">l-2</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-5 col">l-5</div>
 					<div class="l-7 col">l-7</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-3 col">l-3</div>
 					<div class="l-6 col">l-6</div>
 					<div class="l-3 col">l-3</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-3 col">l-3</div>
 					<div class="l-9 col">l-9</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-10 col">l-10</div>
 					<div class="l-2 col">l-2</div>
-				</div>
+				</div><!-- .row -->
 
 				<div class="row">
 					<div class="l-1 col">l-1</div>
 					<div class="l-11 col">l-11</div>
-				</div>
-			</section>
+				</div><!-- .row -->
 
-		</div><!-- .wrapper-main -->
+			</section>
+		</div><!-- .wrapper -->
+
 	</body>
 </html>
